Updated the Parsing Logic to reflect all possible scenarios.  Also updated test to verify results.